<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

    <groupId>com.bbende.project.starter</groupId>
    <artifactId>project-starter</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>Project Starter</name>

    <properties>
        <!-- Project/Plugin related properties -->
        <java.version>11</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.resources.plugin.version>3.1.0</maven.resources.plugin.version>
        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
        <maven.failsafe.plugin.version>2.22.2</maven.failsafe.plugin.version>
        <maven.assembly.plugin.version>3.0.0</maven.assembly.plugin.version>
        <maven.checkstyle.plugin.version>3.1.1</maven.checkstyle.plugin.version>
        <maven.checkstyle.puppycrawl.version>8.31</maven.checkstyle.puppycrawl.version>
        <maven.javadoc.plugin.version>3.2.0</maven.javadoc.plugin.version>
        <maven.source.plugin.version>3.2.0</maven.source.plugin.version>
        <maven.dependency.plugin.version>3.1.2</maven.dependency.plugin.version>
        <maven.antrun.plugin.version>1.8</maven.antrun.plugin.version>
        <maven.download.plugin.version>1.2.1</maven.download.plugin.version>
        <maven.frontend.plugin.version>1.6</maven.frontend.plugin.version>
        <maven.eclipselink.plugin.version>2.7.1.1</maven.eclipselink.plugin.version>
        <maven.dockerfile.plugin.version>1.4.13</maven.dockerfile.plugin.version>
        <jib-maven-plugin.version>2.5.2</jib-maven-plugin.version>
        <jib-spring-boot-extension-maven.version>0.1.0</jib-spring-boot-extension-maven.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- Dependency Versions -->
        <spring.boot.version>2.3.2.RELEASE</spring.boot.version>
        <jackson.version>2.11.0</jackson.version>
        <flyway.version>6.3.2</flyway.version>
        <flyway.tests.version>6.1.0</flyway.tests.version>
        <eclipse.link.version>2.7.6</eclipse.link.version>
        <h2.version>1.4.200</h2.version>
        <postgres.driver.version>42.2.5</postgres.driver.version>
        <mysql.driver.version>8.0.15</mysql.driver.version>
        <mariadb.driver.version>2.4.1</mariadb.driver.version>
        <test.containers.version>1.14.3</test.containers.version>
        <node.version>v10.14.1</node.version>
        <npm.version>6.4.1</npm.version>
        <swagger.ui.version>3.12.0</swagger.ui.version>
        <swagger.version>2.1.2</swagger.version>
        <commons.lang.version>3.10</commons.lang.version>
        <thymeleaf.dialect.version>2.4.1</thymeleaf.dialect.version>

        <!-- Default env name (dist or dev)-->
        <env.name>dist</env.name>

        <!-- Passed to surefire and failsafe plugins to control skipping tests -->
        <skip.tests>false</skip.tests>
    </properties>

    <modules>
      <module>project-starter-webapp</module>
      <module>project-starter-assembly</module>
      <module>project-starter-testcontainers</module>
    </modules>

    <build>
        <pluginManagement>
            <plugins>
                <!-- Maven compiler -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven.compiler.plugin.version}</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <!-- Run unit tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven.surefire.plugin.version}</version>
                    <configuration>
                        <argLine>--illegal-access=permit</argLine>
                        <skipTests>${skip.tests}</skipTests>
                    </configuration>
                </plugin>
                <!-- Run integration tests -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven.failsafe.plugin.version}</version>
                    <configuration>
                        <argLine>--illegal-access=permit</argLine>
                        <classesDirectory>${project.build.outputDirectory}</classesDirectory>
                        <skipTests>${skip.tests}</skipTests>
                    </configuration>
                    <executions>
                        <execution>
                            <id>integration-test</id>
                            <goals>
                                <goal>integration-test</goal>
                                <goal>verify</goal>
                            </goals>
                            <phase>verify</phase>
                        </execution>
                    </executions>
                </plugin>
                <!-- Check code style/formatting -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven.checkstyle.plugin.version}</version>
                    <dependencies>
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${maven.checkstyle.puppycrawl.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <configLocation>checkstyle.xml</configLocation>
                        <violationSeverity>warning</violationSeverity>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                    </configuration>
                    <executions>
                        <execution>
                            <id>check-style</id>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Generate javadocs -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-javadoc-plugin</artifactId>
                    <version>${maven.javadoc.plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <failOnError>false</failOnError>
                        <quiet>true</quiet>
                        <show>private</show>
                        <encoding>UTF-8</encoding>
                        <quiet>true</quiet>
                        <additionalJOption>-J-Xmx512m</additionalJOption>
                        <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
                    </configuration>
                    <executions>
                        <execution>
                            <id>attach-javadocs</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Attach sources -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven.source.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Process resources -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>${maven.resources.plugin.version}</version>
                </plugin>
                <!-- Copy dependencies -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-dependency-plugin</artifactId>
                    <version>${maven.dependency.plugin.version}</version>
                </plugin>
                <!-- Build zip and tar/gz assemblies -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>${maven.assembly.plugin.version}</version>
                </plugin>
                <!-- Package spring-boot applications -->
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring.boot.version}</version>
                    <configuration>
                        <layout>ZIP</layout>
                        <layers>
                            <enabled>true</enabled>
                        </layers>
                    </configuration>
                    <executions>
                        <execution>
                            <phase>package</phase>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <!-- Eclipse link static weaver -->
                <plugin>
                    <groupId>com.ethlo.persistence.tools</groupId>
                    <artifactId>eclipselink-maven-plugin</artifactId>
                    <version>${maven.eclipselink.plugin.version}</version>
                    <executions>
                        <execution>
                            <phase>process-classes</phase>
                            <goals>
                                <goal>weave</goal>
                            </goals>
                        </execution>
                    </executions>
                    <dependencies>
                        <dependency>
                            <groupId>org.eclipse.persistence</groupId>
                            <artifactId>org.eclipse.persistence.jpa</artifactId>
                            <version>${eclipse.link.version}</version>
                        </dependency>
                    </dependencies>
                </plugin>
                <!-- Execute npm/gulp tasks -->
                <plugin>
                    <groupId>com.github.eirslett</groupId>
                    <artifactId>frontend-maven-plugin</artifactId>
                    <version>${maven.frontend.plugin.version}</version>
                </plugin>
                <!-- Generate swagger spec -->
                <plugin>
                    <groupId>io.swagger.core.v3</groupId>
                    <artifactId>swagger-maven-plugin</artifactId>
                    <version>${swagger.version}</version>
                </plugin>
                <!-- Download remote resources -->
                <plugin>
                    <groupId>com.googlecode.maven-download-plugin</groupId>
                    <artifactId>download-maven-plugin</artifactId>
                    <version>${maven.download.plugin.version}</version>
                </plugin>
                <!-- Execute ant tasks -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>${maven.antrun.plugin.version}</version>
                </plugin>
                <!-- Build/push docker images -->
                <plugin>
                    <groupId>com.google.cloud.tools</groupId>
                    <artifactId>jib-maven-plugin</artifactId>
                    <version>${jib-maven-plugin.version}</version>
                    <!-- Use the jib spring-boot extensions to exclude dev tools
                         See: https://github.com/GoogleContainerTools/jib/issues/2336 -->
                    <dependencies>
                        <dependency>
                            <groupId>com.google.cloud.tools</groupId>
                            <artifactId>jib-spring-boot-extension-maven</artifactId>
                            <version>${jib-spring-boot-extension-maven.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <pluginExtensions>
                            <pluginExtension>
                                <implementation>com.google.cloud.tools.jib.maven.extension.springboot.JibSpringBootExtension</implementation>
                            </pluginExtension>
                        </pluginExtensions>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- Plugins for all modules -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- Sets env.name=dev so frontend-maven-plugin can tell Gulp to disable minifiy/uglify -->
        <profile>
            <id>dev</id>
            <properties>
                <env.name>dev</env.name>
            </properties>
        </profile>
        <!-- Skips checkstyle plugin -->
        <profile>
            <id>skip-checkstyle</id>
            <properties>
                <checkstyle.skip>true</checkstyle.skip>
            </properties>
        </profile>
        <!-- Skips javadoc plugin -->
        <profile>
            <id>skip-javadoc</id>
            <properties>
                <maven.javadoc.skip>true</maven.javadoc.skip>
            </properties>
        </profile>
        <!-- Skips attaching sources  -->
        <profile>
            <id>skip-sources</id>
            <properties>
                <maven.source.skip>true</maven.source.skip>
            </properties>
        </profile>
        <!-- Skips all tests -->
        <profile>
            <id>skip-tests</id>
            <properties>
                <skip.tests>true</skip.tests>
            </properties>
        </profile>
        <!-- Skips checkstyle, javadoc, attach sources, and all tests -->
        <profile>
            <id>skip-all</id>
            <properties>
                <checkstyle.skip>true</checkstyle.skip>
                <maven.javadoc.skip>true</maven.javadoc.skip>
                <maven.source.skip>true</maven.source.skip>
                <skip.tests>true</skip.tests>
            </properties>
        </profile>
    </profiles>

</project>
